# openmoor

./: CMakeLists.txt  LICENSE  README.md  UseCMakeMac.txt  doxygenconfig  moorconfig.h  moorconfig.h.in
doxygen/: mainpage.dox  refs.bib
examples/: Setting.xml
examples/oc3/: CaseOC3.xml  CaseOC31.xml
examples/validation/: CaseModel.xml
include/: polyfit.cc
include/Eigen/: Polynomials  Splines
include/Eigen/src/Splines/: SplineFitting.h  SplineFwd.h
include/rapidxml-1.13/: rapidxml_print.hpp
lib/: CaseOC3.xml  moorapi.h  openmoor_driver.m
src/: cable.cc  cable.h  catenary.cc  catenary.h  input.cc  input.h  main.cc  meshoptimizer.cc  meshoptimizer.h  moorapi.cc  moorerror.cc  moorerror.h  mooring.h  node.cc  node.h  numeric.h  platform.cc  platform.h  reader.cc  reader.h  setting.cc  setting.h  simulation.cc  simulation.h  solver.cc  solver.h  utility.cc  utility.h  writer.cc  writer.h
